; ModuleID = '/home/carl/AnghaBench/HandBrake/test/extr_test.c_showFilterDefault.c'
source_filename = "/home/carl/AnghaBench/HandBrake/test/extr_test.c_showFilterDefault.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"default\00", align 1
@.str.1 = private unnamed_addr constant [68 x i8] c"                           Default:\0A                               \00", align 1
@UNSHARP_DEFAULT_PRESET = common dso_local global i8* null, align 8
@LAPSHARP_DEFAULT_PRESET = common dso_local global i8* null, align 8
@CHROMA_SMOOTH_DEFAULT_PRESET = common dso_local global i8* null, align 8
@NLMEANS_DEFAULT_PRESET = common dso_local global i8* null, align 8
@DEINTERLACE_DEFAULT_PRESET = common dso_local global i8* null, align 8
@DECOMB_DEFAULT_PRESET = common dso_local global i8* null, align 8
@DETELECINE_DEFAULT_PRESET = common dso_local global i8* null, align 8
@HQDN3D_DEFAULT_PRESET = common dso_local global i8* null, align 8
@COMB_DETECT_DEFAULT_PRESET = common dso_local global i8* null, align 8
@DEBLOCK_DEFAULT_PRESET = common dso_local global i8* null, align 8
@.str.2 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.3 = private unnamed_addr constant [33 x i8] c"\0A                               \00", align 1
@.str.4 = private unnamed_addr constant [7 x i8] c"%s%s%s\00", align 1
@.str.5 = private unnamed_addr constant [2 x i8] c":\00", align 1
@.str.6 = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@ROTATE_DEFAULT = common dso_local global i8* null, align 8
@.str.7 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @showFilterDefault to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @showFilterDefault(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8**, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %5, align 8
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 (i32*, i8*, ...) @fprintf(i32* %14, i8* getelementptr inbounds ([68 x i8], [68 x i8]* @.str.1, i64 0, i64 0))
  %16 = load i32, i32* %4, align 4
  switch i32 %16, label %37 [
    i32 128, label %17
    i32 131, label %19
    i32 138, label %21
    i32 130, label %23
    i32 134, label %25
    i32 135, label %27
    i32 133, label %29
    i32 132, label %31
    i32 137, label %33
    i32 136, label %35
  ]

17:                                               ; preds = %2
  %18 = load i8*, i8** @UNSHARP_DEFAULT_PRESET, align 8
  store i8* %18, i8** %5, align 8
  br label %38

19:                                               ; preds = %2
  %20 = load i8*, i8** @LAPSHARP_DEFAULT_PRESET, align 8
  store i8* %20, i8** %5, align 8
  br label %38

21:                                               ; preds = %2
  %22 = load i8*, i8** @CHROMA_SMOOTH_DEFAULT_PRESET, align 8
  store i8* %22, i8** %5, align 8
  br label %38

23:                                               ; preds = %2
  %24 = load i8*, i8** @NLMEANS_DEFAULT_PRESET, align 8
  store i8* %24, i8** %5, align 8
  br label %38

25:                                               ; preds = %2
  %26 = load i8*, i8** @DEINTERLACE_DEFAULT_PRESET, align 8
  store i8* %26, i8** %5, align 8
  br label %38

27:                                               ; preds = %2
  %28 = load i8*, i8** @DECOMB_DEFAULT_PRESET, align 8
  store i8* %28, i8** %5, align 8
  br label %38

29:                                               ; preds = %2
  %30 = load i8*, i8** @DETELECINE_DEFAULT_PRESET, align 8
  store i8* %30, i8** %5, align 8
  br label %38

31:                                               ; preds = %2
  %32 = load i8*, i8** @HQDN3D_DEFAULT_PRESET, align 8
  store i8* %32, i8** %5, align 8
  br label %38

33:                                               ; preds = %2
  %34 = load i8*, i8** @COMB_DETECT_DEFAULT_PRESET, align 8
  store i8* %34, i8** %5, align 8
  br label %38

35:                                               ; preds = %2
  %36 = load i8*, i8** @DEBLOCK_DEFAULT_PRESET, align 8
  store i8* %36, i8** %5, align 8
  br label %38

37:                                               ; preds = %2
  br label %38

38:                                               ; preds = %37, %35, %33, %31, %29, %27, %25, %23, %21, %19, %17
  %39 = load i32, i32* %4, align 4
  switch i32 %39, label %96 [
    i32 134, label %40
    i32 130, label %40
    i32 138, label %40
    i32 128, label %40
    i32 131, label %40
    i32 135, label %40
    i32 133, label %40
    i32 132, label %40
    i32 137, label %40
    i32 136, label %40
    i32 129, label %92
  ]

40:                                               ; preds = %38, %38, %38, %38, %38, %38, %38, %38, %38, %38
  %41 = load i32, i32* %4, align 4
  %42 = load i8*, i8** %5, align 8
  %43 = call i32* @hb_generate_filter_settings(i32 %41, i8* %42, i32* null, i32* null)
  store i32* %43, i32** %6, align 8
  %44 = load i32, i32* %4, align 4
  %45 = load i32*, i32** %6, align 8
  %46 = call i8* @hb_filter_settings_string(i32 %44, i32* %45)
  store i8* %46, i8** %7, align 8
  %47 = call i32 @hb_value_free(i32** %6)
  %48 = load i8*, i8** %7, align 8
  %49 = call i8** @hb_str_vsplit(i8* %48, i8 signext 58)
  store i8** %49, i8*** %8, align 8
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0), i8** %9, align 8
  store i32 0, i32* %12, align 4
  store i32 0, i32* %11, align 4
  br label %50

50:                                               ; preds = %84, %40
  %51 = load i8**, i8*** %8, align 8
  %52 = load i32, i32* %11, align 4
  %53 = sext i32 %52 to i64
  %54 = getelementptr inbounds i8*, i8** %51, i64 %53
  %55 = load i8*, i8** %54, align 8
  %56 = icmp ne i8* %55, null
  br i1 %56, label %57, label %87

57:                                               ; preds = %50
  %58 = load i8**, i8*** %8, align 8
  %59 = load i32, i32* %11, align 4
  %60 = sext i32 %59 to i64
  %61 = getelementptr inbounds i8*, i8** %58, i64 %60
  %62 = load i8*, i8** %61, align 8
  %63 = call i32 @strlen(i8* %62)
  %64 = add nsw i32 %63, 1
  store i32 %64, i32* %13, align 4
  %65 = load i32, i32* %12, align 4
  %66 = load i32, i32* %13, align 4
  %67 = add nsw i32 %65, %66
  %68 = icmp sgt i32 %67, 48
  br i1 %68, label %69, label %70

69:                                               ; preds = %57
  store i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.3, i64 0, i64 0), i8** %10, align 8
  store i32 0, i32* %12, align 4
  br label %71

70:                                               ; preds = %57
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0), i8** %10, align 8
  br label %71

71:                                               ; preds = %70, %69
  %72 = load i32*, i32** %3, align 8
  %73 = load i8*, i8** %9, align 8
  %74 = load i8*, i8** %10, align 8
  %75 = load i8**, i8*** %8, align 8
  %76 = load i32, i32* %11, align 4
  %77 = sext i32 %76 to i64
  %78 = getelementptr inbounds i8*, i8** %75, i64 %77
  %79 = load i8*, i8** %78, align 8
  %80 = call i32 (i32*, i8*, ...) @fprintf(i32* %72, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.4, i64 0, i64 0), i8* %73, i8* %74, i8* %79)
  %81 = load i32, i32* %13, align 4
  %82 = load i32, i32* %12, align 4
  %83 = add nsw i32 %82, %81
  store i32 %83, i32* %12, align 4
  store i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.5, i64 0, i64 0), i8** %9, align 8
  br label %84

84:                                               ; preds = %71
  %85 = load i32, i32* %11, align 4
  %86 = add nsw i32 %85, 1
  store i32 %86, i32* %11, align 4
  br label %50

87:                                               ; preds = %50
  %88 = load i8**, i8*** %8, align 8
  %89 = call i32 @hb_str_vfree(i8** %88)
  %90 = load i8*, i8** %7, align 8
  %91 = call i32 @free(i8* %90)
  br label %97

92:                                               ; preds = %38
  %93 = load i32*, i32** %3, align 8
  %94 = load i8*, i8** @ROTATE_DEFAULT, align 8
  %95 = call i32 (i32*, i8*, ...) @fprintf(i32* %93, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.6, i64 0, i64 0), i8* %94)
  br label %97

96:                                               ; preds = %38
  br label %97

97:                                               ; preds = %96, %92, %87
  %98 = load i32*, i32** %3, align 8
  %99 = call i32 (i32*, i8*, ...) @fprintf(i32* %98, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.7, i64 0, i64 0))
  ret void
}

declare dso_local i32 @fprintf(i32*, i8*, ...) #1

declare dso_local i32* @hb_generate_filter_settings(i32, i8*, i32*, i32*) #1

declare dso_local i8* @hb_filter_settings_string(i32, i32*) #1

declare dso_local i32 @hb_value_free(i32**) #1

declare dso_local i8** @hb_str_vsplit(i8*, i8 signext) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @hb_str_vfree(i8**) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
